tests/paczka1/fuzzy1/95390713.err
Error in line 13: ROGXmDsliEm A54 36,6
Error in line 14: GteBM3O S891 49,7
Error in line 26: GteBM3O A54 38,0
Error in line 28: GteBM3O S891 37,0
Error in line 33: A54 A133 68,2
Error in line 29: sQaA5OyQ A54 57,3
